--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Eduardo Rojas",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "consign": "^0.1.6",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
