--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   "author": "Eduardo Rojas",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "consign": "^0.1.6",
     "express": "^4.18.2",
+    "jwt-simple": "^0.5.6",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4"
   }
